manifests/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: deploy-system
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
