manifests/base/api/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: deploy-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`procla.dev`)
      kind: Rule
      services:
        - name: api
          port: 8080
